tests/ui/suggestions/missing-bound-in-derive-copy-impl-3.stderr
error[E0204]: the trait `Copy` cannot be implemented for this type
  --> $DIR/missing-bound-in-derive-copy-impl-3.rs:10:17
   |
LL | #[derive(Debug, Copy, Clone)]
   |                 ^^^^
LL | pub struct AABB<K: Copy>{
LL |     pub loc: Vector2<K>,
   |     ------------------- this field does not implement `Copy`
   |
note: the `Copy` impl for `Vector2<K>` requires that `K: Debug`
  --> $DIR/missing-bound-in-derive-copy-impl-3.rs:12:14
   |
LL |     pub loc: Vector2<K>,
   |              ^^^^^^^^^^
   = note: this error originates in the derive macro `Copy` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
   |
LL | pub struct AABB<K: Copy + Debug>{
   |                         +++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0204`.
